--- a/lm-journal/src/App.css
+++ b/lm-journal/src/App.css
@@ -1,3 +1,11 @@
+@font-face {
+  font-family: 'Quicksand';
+  src: url('/fonts/Quicksand/Quicksand-VariableFont_wght.ttf') format('truetype-variations');
+  font-weight: 100 900;
+  font-style: normal;
+  font-display: swap;
+}
+
 @import "tailwindcss";
 @import "tw-animate-css";
 
@@ -116,5 +124,6 @@
   }
   body {
     @apply bg-background text-foreground;
+    font-family: 'Quicksand', sans-serif;
   }
 }
